Update homepage with options and styles Updated the homepage with a menu, and small fixes in the other pages. like in styles, footer and alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-}
-
 .content {
     max-width: 500px;
     margin: auto;
@@ -12,6 +7,7 @@ body {
     padding: auto;
 }
 
+
 .options {
     float: right;
     margin-right: auto;
@@ -20,14 +16,21 @@ body {
 }
 
 
+a.homepage-lnk:hover {
+    background-color: transparent;
+}
+
+
 a:link {
     color: #000;
     font-weight: 700;
     text-decoration: none;
+    border-radius: 5px 5px 5px 5px;
+    padding: 2px;
 }
 
 
-ul {
+.menuitem {
     list-style-type: none;
 }
 
@@ -40,6 +43,7 @@ a:visited {
 a:hover {
     background: #E3B261;
     color: #FFF;
+    font-weight: 0;
   }
 
 
@@ -58,29 +62,76 @@ a:hover {
     display: inline-block;
     margin-left: 50px;
     width: 250px;
+    margin-top: 13px;
 }
 
+
 footer {
-    bottom: 0%;
-    position: relative;
-    margin-top: auto;
-    width: 100%;
-    height: 50px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: darkslategray;
-    padding: 30px 20px 0px 20px;
+    padding: 1em;
     color: #FFF;
     font-weight: 700;
     text-align: center;
  }
 
+
+.page-img {
+    display: block;
+    margin: 0 auto;
+ }
+
+
  .recipe {
-    border: 2px dashed  #ffffff;
+    border: 2px dashed  #000;
+    text-align: center;
  }
 
 
- #homepage-ftr {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+ .card {
+    background-color: #fff;
+    border-radius: 0.5rem;
+    box-shadow: 0.05rem 0.1rem 0.3rem -0.03rem rgba(0, 0, 0, 0.45);
+    padding-bottom: 1rem;
+    overflow: hidden;
+ }
+
+
+ .homepage-img  {
+    border-radius: 0.5rem 0.5rem 0 0;
     width: 100%;
- }
+    object-fit: cover;
+    height: max(10rem, 25vh);
+     }
+
+
+body {
+    display: grid;
+    place-content: center;
+    justify-items: center;
+    min-height: 96.8vh;
+    margin: 0;
+    padding: 1rem;
+    line-height: 1.5;
+    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
+        helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+    color: #444;
+    background-color: #e1faf1;
+    position: relative;
+}
+
+
+.card-wrapper {
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
+    grid-gap: 1.5rem;
+    max-width: 100vw;
+    width: 120ch;
+    padding-left: 3rem;
+    padding-right: 1rem;
+    color: rgb(112, 112, 112);
+}
